--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Festa Julina - Tudo o que você precisa saber</title>
 </head>
 <body>
-    <h1 class="oi">oii!</h1>
-    <p class="tudo">tudo</p>
-    <p class="bem">bem?</p>
+    <div class="sócratesfilósofo">
+        <h1 class="oi">oii!</h1>
+        <p class="tudo">tudo</p>
+        <p class="bem">bem?</p>
+    </div>
 </body>
 </html>
