--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Festa julina - Absolutamente tudo o que você precisa saber sobre a festa julina do Colégio C-M República Oriental Uruguai</title>
+    <title>Festa julina - Tudo o que você precisa saber sobre a festa julina do CCM República Oriental Uruguai</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="estilo.css">
 </head>
