--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div class="sócratesfilósofo">
         <h1 class="oi">oii!</h1>
-        <p class="tudo">tudo</p>
-        <p class="bem">bem?</p>
+        <div class="nãosei">
+            <p class="tudo">tudo</p>
+            <p class="bem">bem?</p>
+        </div>
     </div>
 </body>
 </html>
