--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="sócratesfilósofo">
-        <h1 class="oi">oii!</h1>
-        <p class="tudo">tudo</p>
-        <p class="bem">bem?</p>
+        <h1 class="oi">shh!</h1>
+        <p class="tudo">esse site</p>
+        <p class="bem">tá em construção</p>
     </div>
 </body>
 </html>
