--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 https://festa-julina.vercel.app/
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Festa julina - Tudo o que você precisa saber sobre a festa julina do CCM República Oriental Uruguai</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="estilo.css">
+</head>
+<body>
+    <div class="sócratesfilósofo">
+        <h1 class="oi">shhhh!</h1>
+        <p class="tudo">esse site</p>
+        <p class="bem">tá em construção!</p>
+    </div>
+</body>
+</html>
