--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@ https://festa-julina.vercel.app/
         <p class="tudo">esse site</p>
         <p class="bem">tá em construção!</p>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
